[package]
name = "annotate_pext_variance"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.9"
half = "2.7.1"
indexmap = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
debug = false
